src/FinancialForce Accounting/objects/CurrencyRevaluationTemplate__c.object
<CustomObject>
    <description>Stores currency revaluation template information.</description>
    <fields>
        <fullName>AnalysisBreakdown__c</fullName>
        <label>Analysis Breakdown</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis Breakdown - Standard</fullName>
                </value>
                <value>
                    <fullName>Analysis Breakdown - Sub-Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Currency Revaluation Templates</relationshipLabel>
        <relationshipName>CurrencyRevaluationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Currency Revaluation Templates</relationshipLabel>
        <relationshipName>CurrencyRevaluationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Currency Revaluation Templates</relationshipLabel>
        <relationshipName>CurrencyRevaluationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DimensionAnalysis__c</fullName>
        <label>Dimension Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Copy from the source transactions</fullName>
                </value>
                <value>
                    <fullName>Specify dimensions</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IgnoreUnusedCurrencies__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ignore Unused Currencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinesAlreadyRevalued__c</fullName>
        <label>Exclude Revalued Lines</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exclude from selection</fullName>
                </value>
                <value>
                    <fullName>Fail with an error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RevaluationType__c</fullName>
        <label>Revaluation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SummaryDetail__c</fullName>
        <label>Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Summarize lines with the same analysis</fullName>
                </value>
                <value>
                    <fullName>List all revaluation detail lines individually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnrealizedGainsLossesGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unrealized Gains/Losses GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Currency Revaluation Templates</relationshipLabel>
        <relationshipName>CurrencyRevaluationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Currency Revaluation Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Currency Revaluation Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Revaluation Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>